--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,6 +10,7 @@
     "react-click-n-hold": "^1.0.7",
     "react-dom": "^18.2.0",
     "react-holdable": "^1.0.4",
+    "react-piano": "^3.1.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -36,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "typescript": "^4.9.5"
   }
 }
