--- a/my-app/package.json
+++ b/my-app/package.json
@@ -39,6 +39,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
+    "babel-loader": "^9.1.2",
     "typescript": "^4.9.5"
   }
 }
